# ByteWeaver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cpp.hint
ByteWeaver/: CMakeLists.txt
ByteWeaver/include/: AddressDB.h  AddressEntry.h  AddressScanner.h  ByteWeaver.h  ByteWeaverPCH.h  DetourMacros.hpp  HardwareBP.h  HardwareBPMacros.h  MemoryManager.h  MemoryModification.h  WinDetour.h  WinPatch.h
ByteWeaver/src/: AddressDB.cpp  AddressEntry.cpp  AddressScanner.cpp  ByteWeaver.cpp  HardwareBP.cpp  MemoryManager.cpp  WinDetour.cpp  WinPatch.cpp
ConsoleLogger/: CMakeLists.txt
ConsoleLogger/include/: resource.h
ConsoleLogger/src/: ConsoleLogger.cpp  ConsoleLogger.rc.in
DebugTools/: CMakeLists.txt
DebugTools/include/: DebugTools.h  ModuleTools.hpp
DebugTools/src/: DebugTools.cpp
LogUtils/: CMakeLists.txt
LogUtils/include/: FileManager.h  LogUtils.h  Logger.h  RemoteConsole.h  Shared.h
LogUtils/src/: FileManager.cpp  Logger.cpp  RemoteConsole.cpp
include/: AddressDB.h  AddressEntry.h  AddressScanner.h  ByteWeaver.h  DebugTools.h  MemoryManager.h  OffsetDB.h  PCH.h  SigScanner.h  WinDetour.h  WinPatch.h
include/LogUtils/: FileManager.cpp  FileManager.h  Logger.cpp  RemoteConsole.cpp  RemoteConsole.h
src/: AddressDB.cpp  AddressEntry.cpp  AddressScanner.cpp  ByteWeaver.cpp  DebugTools.cpp  MemoryManager.cpp  OffsetDB.cpp  SigScanner.cpp  WinDetour.cpp  WinPatch.cpp
